[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkan = { path = "../vulkan" }
math = { path = "../math" }
winit = { version = "0.30.12", default-features = false, features = ["x11", "rwh_06"] }
# winit = "0.30.12"
ash = "0.38.0"
ash-window = "0.13.0"
image = "0.25.9"
tracing = "0.1.44"
slotmap = "1.0"

[build-dependencies]
spirv = { path = "../spirv" }
